--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@rehooks/toggle",
+  "name": "use-toggle",
   "version": "1.0.0",
   "description": "React hook for toggling things",
   "main": "index.js",
-  "repository": "https://github.com/rehooks/toggle",
+  "repository": "https://github.com/calvein/toggle",
   "author": "François Robichet <@calvein>",
   "license": "MIT",
   "publishConfig": {
@@ -22,16 +22,16 @@
     "example": "parcel example.html"
   },
   "peerDependencies": {
-    "react": "^16.7.0-alpha.0"
+    "react": "^16.8.6"
   },
   "devDependencies": {
     "ava": "^0.25.0",
     "browser-env": "^3.2.5",
     "parcel": "^1.10.3",
     "raf": "^3.4.0",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
-    "react-test-renderer": "^16.7.0-alpha.0"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.8.6"
   },
   "ava": {
     "require": [
